[package]
name = "parachain-staking"
version = "2.1.1"
authors = ["PureStake"]
edition = "2018"
description = "parachain staking pallet for collator selection and reward distribution"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
log = "0.4"
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
substrate-fixed = { default-features = false, git = "https://github.com/justinphamnz/substrate-fixed" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
similar-asserts = "1.1.0"


[features]
default = ["std"]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-session/std",
    "scale-info/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]